--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Zheng's Personal Site </title>
   </head>
   <body>
-    <img src="https://lh3.googleusercontent.com/proxy/vE60hgNZAOnmeScs3oX8SzFPGPQMo8PQowopCH2D9m7mkjBLO4AOLw3WMF2_TDa1aFRTFr1SAqttLZ--5ja0BA0uljSYbmMG3rNgm1t8obuRhFXBOc5dIyQV_oFwYVc" alt="Zheng favourite fruit">
+    <img src="https://pixnio.com/free-images/2017/05/18/2017-05-18-11-39-24.jpg" alt="Zheng favourite fruit">
     <h1>Zheng Fan</h1>
     <p><em>PhD student in Economics at the University of Melbourne </em></p>
 
