--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Zheng's Personal Site </title>
   </head>
   <body>
-    <img src="https://pixnio.com/free-images/2017/05/18/2017-05-18-11-39-24.jpg" alt="Zheng favourite fruit">
+    <img src="http://freefoodphotos.com/imagelibrary/fruit/slides/single_orange.jpg" alt="Zheng favourite fruit">
     <h1>Zheng Fan</h1>
     <p><em>PhD student in Economics at the University of Melbourne </em></p>
 
@@ -20,6 +20,9 @@
 
       <hr size=2>
       <h3>Scholarships</h3>
+      
+      <hr size=2>
+      <h3>Social activities</h3>      
 
 <hr>
 
@@ -33,11 +36,11 @@
   
   <tbody>
   <tr>
-    <td>2009-2019</td>
+    <td>1990-2019</td>
     <td>Tutor</td>
   </tr>
   <tr>
-    <td>2021</td>
+    <td>2000-2021</td>
     <td>RA</td>
   </tr>
 </tbody>
