--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Zheng's Personal Site </title>
   </head>
   <body>
+    <a href="zhengf1.github.io/folder/ZhengFan-CV-ce.pdf" target="_blank">PDF.</a>
     <img src="http://freefoodphotos.com/imagelibrary/fruit/slides/single_orange.jpg" alt="Zheng favourite fruit">
     <h1>Zheng Fan</h1>
     <p><em>PhD student in Economics at the University of Melbourne </em></p>
