--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" /> 
+	<link rel="stylesheet" type="text/css" href="second.css" media="all" /> 
 	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
 
 </head>
@@ -26,8 +26,8 @@
 
 				<div class="yui-u">
 					<div class="contact-info">
-						<h3><a id="pdf" href="#">Download PDF</a></h3>
-						<h3><a href="mailto:name@yourdomain.com">zhengfan2015@gmail.com</a></h3>
+						<h3><a id="pdf" href="ZhengFan-CV-ce">Download PDF</a></h3>
+						<h3><a href="mailto:zhengfan2015@gmail.com">zhengfan2015@gmail.com</a></h3>
 						<h3>(+61)-451160801</h3>
 					</div><!--// .contact-info -->
 				</div>
@@ -40,11 +40,11 @@
 
 					<div class="yui-gf">
 						<div class="yui-u first">
-							<h2>Welcome</h2>
+							<h2>Welcome!</h2>
 						</div>
 						<div class="yui-u">
 							<p>
-								Hi, welcome to my personal website! It contains all the information listed in my CV. You can also download my dual language CV by clicking the top right buttom.
+								Hi, welcome to my personal website! It contains all the information listed in my CV. You can also download my dual language CV by clicking the top right buttom (English and Chinese). Alternatively, you can press Control + P (windows) or Command + P (mac) to save.
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
@@ -52,7 +52,7 @@
 
 					<div class="yui-gf">
 						<div class="yui-u first">
-							<h2>Research Interest</h2>
+							<h2>Research interest</h2>
 						</div>
 						<div class="yui-u">
 							<p >
