--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 				<div class="yui-u">
 					<div class="contact-info">
-						<h3><a id="pdf" href="ZhengFan-CV-ce">Download PDF</a></h3>
+						<h3><a id="pdf" href="https://www.dropbox.com/s/9ivq2pxaf97ekfj/ZhengFan-CV-ce.pdf?dl=0">Download PDF</a></h3>
 						<h3><a href="mailto:zhengfan2015@gmail.com">zhengfan2015@gmail.com</a></h3>
 						<h3>(+61)-451160801</h3>
 					</div><!--// .contact-info -->
