--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="yui-u">
 					<div class="contact-info">
 						<h3><a id="pdf" href="https://www.dropbox.com/s/9ivq2pxaf97ekfj/ZhengFan-CV-ce.pdf?dl=0">Download PDF</a></h3>
-						<h3><a href="mailto:zhengfan2015@gmail.com">zhengfan2015@gmail.com</a></h3>
+						<h3><a href="mailto:fan.z@unimelb.edu.au">fan.z@unimelb.edu.au</a></h3>
 						<h3>(+61)-451160801</h3>
 					</div><!--// .contact-info -->
 				</div>
@@ -285,7 +285,7 @@
 		</div><!--// bd -->
 
 		<div id="ft">
-			<p>Zheng Fan &mdash; <a href="mailto:zhengfan2015@gmail.com">zhengfan2015@gmail.com</a> &mdash; (+61)-451160801</p>
+			<p>Zheng Fan &mdash; <a href="mailto:fan.z@unimelb.edu.au">fan.z@unimelb.edu.au</a> &mdash; (+61)-451160801</p>
 		</div><!--// footer -->
 
 	</div><!-- // inner -->
