--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						</div>
 						<div class="yui-u">
 							<p >
-								Bayesian econometrics; Financial economtrics; Machine learning.
+								Bayesian econometrics; Financial econometrics; Machine learning.
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
