--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 							<div class="job">
 								<h2>The University of Melbourne</h2>
-								<h4>Feb 2020 - Present</h4>
+								<h4>Feb 2020 - Present: </h4>
 								<h3>	PhD in Economics (fully funded). GPA: 87.56/100</h3>
 								<p>Supervisor: Dr. Yong Song</p>
 							</div>
@@ -152,13 +152,40 @@
 							<div class="job">
 								<h2> The University of Melbourne</h2>
 								<h3>Teaching assistant (Tutor), Department of Economics</h3>
-								<h4>July 2021 - present</h4>
+								<h4>July 2022 - present</h4>
+								<p>ECON20001: Intermediate Macroeconomics (Semester 2, 2022)<br>
+									Two one-hour tutorials, consultations, marking and etc, weekly<br>
+									Lecturer: Dr. Yusuf Mercan and Dr. Faisal Sohail<br>
+									AND<br>
+									ECOM90025: Advanced Data Analysis (Semester 2, 2022)<br>
+									One one-hour tutorials, consultations, marking and etc, weekly<br>
+									Lecturer: Dr. Yong Song</p>
+							</div>
+
+							<div class="job">
+								<h2> The University of Melbourne</h2>
+								<h3>Teaching assistant (Tutor), Department of Economics</h3>
+								<h4>Feb 2022 - July 2022</h4>
+								<p>ECOM20001: Econometrics 1 (Semester 1, 2022)<br>
+									Three one-hour tutorials, consultations, marking and etc, weekly<br>
+									Lecturer: A/Prof. Marc Chan<br>
+									AND<br>
+									ECON10003: Introductory Macroeconomics (Semester 1, 2022)<br>
+									Three one-hour tutorials, consultations, marking and etc, weekly<br>
+									Lecturer: Dr. Daeha Cho</p>
+							</div>
+
+
+							<div class="job">
+								<h2> The University of Melbourne</h2>
+								<h3>Teaching assistant (Tutor), Department of Economics</h3>
+								<h4>July 2021 - Dec 2021</h4>
 								<p>ECON20001: Intermediate Macroeconomics (Semester 2, 2021)<br>
 									Two one-hour tutorials, consultations, marking and etc, weekly<br>
 									Lecturer: Dr. Yusuf Mercan and Dr. Faisal Sohail<br>
 									AND<br>
 									ECON10005: Quantitative Method 1 (Semester 2, 2021)<br>
-									Tree one-hour tutorials, consultations, marking and etc, weekly<br>
+									Three one-hour tutorials, consultations, marking and etc, weekly<br>
 									Lecturer: Dr. Yong Song</p>
 							</div>
 
@@ -171,7 +198,7 @@
 									Lecturer: Prof. Bruce Preston and Dr. Daeha Cho<br>
 									AND<br>
 									ECON10005: Quantitative Method 1 (Semester 1, 2021)<br>
-									Tree one-hour tutorials, consultations, marking and etc, weekly<br>
+									Three one-hour tutorials, consultations, marking and etc, weekly<br>
 									Lecturer: Prof. David Harris</p>
 							</div>
 
@@ -296,4 +323,3 @@
 
 </body>
 </html>
-
