--- a/index.html
+++ b/index.html
@@ -116,8 +116,14 @@
 								<h2>Graduate Research Scholarships</h2>
 								<h4>2020 - present</h4>
 								<p>Full fee offset<br>
-								Living allowance of $31,200 per year pro rata <br>
+								Living allowance of $34,400 per year pro rata <br>
 								Overseas Student Health Cover (OSHC)</p>
+							</div>
+
+							<div class="job">
+								<h2>MCDS Doctoral Academy</h2>
+								<h4>2022 - 2023</h4>
+								<p>$5000 funding</p>
 							</div>
 							<div class="job">
 								<h2>2019 Dean’s Honours List</h2>
