--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 				<div class="yui-u">
 					<div class="contact-info">
-						<h3><a id="pdf" href="https://www.dropbox.com/s/35a0hnneg1u0cmf/ZhengFan-CV-short.pdf?dl=0">Download PDF</a></h3>
+						<h3><a id="pdf" href="https://www.dropbox.com/s/akevl5yh49a9p55/ZhengFan-CV-short.pdf?dl=0">Download PDF</a></h3>
 						<h3><a href="mailto:fan.z@unimelb.edu.au">fan.z@unimelb.edu.au</a></h3>
 						<h3>(+61)-451160801</h3>
 					</div><!--// .contact-info -->
@@ -44,7 +44,7 @@
 						</div>
 						<div class="yui-u">
 							<p>
-								Hi, welcome to my personal website! It contains all the information listed in my CV. You can also download my dual language CV by clicking the top right buttom (English and Chinese). Alternatively, you can press Control + P (windows) or Command + P (mac) to save.
+								Hi, welcome to my CV website! 
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
@@ -75,7 +75,7 @@
 								<h2>The University of Melbourne</h2>
 								<h4>Feb 2020 - Present: </h4>
 								<h3>	PhD in Economics (fully funded). GPA: 87.56/100</h3>
-								<p>Supervisor: Dr. Yong Song</p>
+								<p>Supervisor: Dr. Yong Song & A/Prof Ole Maneesoonthorn</p>
 							</div>
 
 							<div class="job">
@@ -158,7 +158,16 @@
 							<div class="job">
 								<h2> The University of Melbourne</h2>
 								<h3>Teaching assistant (Tutor), Department of Economics</h3>
-								<h4>July 2022 - present</h4>
+								<h4>Jan 2023 - Feb 2023</h4>
+								<p> ECON20001: Quantitative Method 2 (Semester Summer, 2022)<br>
+									TBD<br>
+									TBD </p>
+							</div>
+
+							<div class="job">
+								<h2> The University of Melbourne</h2>
+								<h3>Teaching assistant (Tutor), Department of Economics</h3>
+								<h4>July 2022 - Dec 2022</h4>
 								<p>ECON20001: Intermediate Macroeconomics (Semester 2, 2022)<br>
 									Two one-hour tutorials, consultations, marking and etc, weekly<br>
 									Lecturer: Dr. Yusuf Mercan and Dr. Faisal Sohail<br>
