--- a/skills.html
+++ b/skills.html
@@ -78,10 +78,8 @@
 				<div class="yui-u">
                     <div class="contact-info">
                         <h4>Contact me via email:</h4> 
-                        <h4><a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></h4><br>
-                 <!--//  <h4><a id="pdf" href="https://www.dropbox.com/s/akevl5yh49a9p55/ZhengFan-CV-short.pdf?dl=0" target="_blank">Download CV</a></h4>-->
-                        <h4><a id="pdf" href="test404.html" target="_blank">Download CV (not ready)</a></h4>
-					</div><!--// .contact-info -->
+                        <h4><a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></h4>
+                    </div><!--// .contact-info -->
 				</div>
 			</div><!--// .yui-gc -->
 		</div><!--// hd -->
@@ -92,7 +90,6 @@
 
  
     <!-- Sidebar -->
-    <!-- Sidebar -->
 <div id="navbar">
 <a href="index.html">Home</a>
 <a href="research.html">Research</a>
@@ -101,30 +98,26 @@
          <!-- Add more links as needed -->
 </div>
  
+ 
+<div style="margin-bottom: 30px;" id="Skills">
+    <h2 style="color:#003366;">Skills</h2>
+    <hr style="border: 0; height: 1px; background: #ccc; margin: 1px 0;">
 
-				<div style="margin-bottom: 30px;" id="Welcome!">
-    <h2 style="color:#003366;">Welcome!</h2>
-        <hr style="border: 0; height: 1px; background: #ccc; margin: 1px 0;">
-    <p>Hi, welcome to my personal website! <br>
-    	 • I'm currently a PhD candidate in Economics at The University of Melbourne. <br>
-</p>
-</div>
-
-
-<div style="margin-bottom: 30px;" id="Research Interests">
-    <h2 style="color:#003366;">Research Interests</h2>
-        <hr style="border: 0; height: 1px; background: #ccc; margin: 1px 0;">
+    <h3>Programming</h3>
     <p>
-        Bayesian Statistics, Non-parametric Methods, Time Series Modelling in Econometrics and Finance
+         • <strong>Specialized in:</strong> Matlab, Sparton (cloud parallel computing), LaTeX, HTML (Markdown).<br>
+         • <strong>Proficient in:</strong> R, Stan, EViews, Mathematica, Git.<br>
+         • <strong>Familiar with:</strong> Stata, Python (for teaching), Lightroom, ArcGIS.
     </p>
-  <p> 
-          • My primary research focuses on shrinkage priors and variable selections. <br>
-          • I also study dimension reduction for high-dimensional data. 
-    </p>
+
+        <h3>Languages</h3>
+    <p> • English (fluent), Mandarin (native)</p>
+
+       <h3>Hobbies</h3>
+    <p> • Coding, Tech gears, Gaming, Badminton, Hiking, Playing with cats.</p>
+
 </div>
-
-
-
+ 
 
  <!--
     <div style="margin-bottom: 30px;">
@@ -162,8 +155,7 @@
 		</div><!--// bd -->
 
 		<div id="ft">
-			<p>Zheng Fan &mdash; <a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></p> 
-                <p>Website update in March 2025</a></p>
+			<p>Zheng Fan &mdash; <a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></p>
 		</div><!--// footer -->
 
 	</div><!-- // inner -->
