--- a/teaching.html
+++ b/teaching.html
@@ -76,11 +76,9 @@
 				</div>
 
 				<div class="yui-u">
-                    <div class="contact-info">
+					<div class="contact-info">
                         <h4>Contact me via email:</h4> 
-                        <h4><a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></h4><br>
-                 <!--//  <h4><a id="pdf" href="https://www.dropbox.com/s/akevl5yh49a9p55/ZhengFan-CV-short.pdf?dl=0" target="_blank">Download CV</a></h4>-->
-                        <h4><a id="pdf" href="test404.html" target="_blank">Download CV (not ready)</a></h4>
+						<h4><a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></h4>
 					</div><!--// .contact-info -->
 				</div>
 			</div><!--// .yui-gc -->
@@ -91,8 +89,6 @@
 				<div class="yui-b">
 
  
-    <!-- Sidebar -->
-    <!-- Sidebar -->
 <div id="navbar">
 <a href="index.html">Home</a>
 <a href="research.html">Research</a>
@@ -102,29 +98,43 @@
 </div>
  
 
-				<div style="margin-bottom: 30px;" id="Welcome!">
-    <h2 style="color:#003366;">Welcome!</h2>
+	 
+ <div style="margin-bottom: 30px;" id = "Academic and Teaching Experience">
+    <h2 style="color:#003366;">Teaching and Academic Services</h2>
         <hr style="border: 0; height: 1px; background: #ccc; margin: 1px 0;">
-    <p>Hi, welcome to my personal website! <br>
-    	 • I'm currently a PhD candidate in Economics at The University of Melbourne. <br>
-</p>
+        <h3>The University of Melbourne, Department of Economics</h3>
+    <p><strong style="color:BrickRed;">• Teaching Assistant (Tutor)</strong> (2019 - present):</p>
+     <p>You may find some of my teaching materials at 
+        <a href="https://github.com/zhengf1?tab=repositories" target="_blank">GitHub HERE</a> for the following subjects:
+    </p>
+      <div style="margin-left: 15px;">
+<table>
+  <tr>
+   <td> </td><td> ECON10003: </td><td>Introductory Macroeconomics (4 semesters, 2019-2022) </td>
+    <td> | ECON10005: </td><td>Quantitative Methods 1 (4 semesters, 2021-2025)</td>
+  </tr>
+  <tr>
+    <td>  </td><td>ECON20001: </td><td>Intermediate Macroeconomics (2 semesters, 2021-2022) </td>
+    <td> | ECON20003: </td><td>Quantitative Methods 2 (summer, 2023)</td>
+  </tr>
+  <tr>
+    <td> </td><td>ECOM20001: </td><td>Econometrics 1 (4 semesters, 2022-2025) </td>
+    <td> | ECOM90025: </td><td>Advanced Data Analysis (2 semesters, 2022-2023)</td>
+  </tr>
+</table>
+  </div>
+
+
+    <p><strong style="color:BrickRed;">• Research Assistant (RA)</strong>: Supervisor: A/Prof. Yong Song, 2021 - present</p>
+    
+            <h3>The University of Melbourne, Melbourne Institute</h3>
+    <p><strong style="color:BrickRed;">• Research Assistant (RA)</strong>: Supervisor: Dr. Ou Yang; Group Director: Prof. Anthony Scott  , 2019</p>
+    
+                <h3>The University of Melbourne, Ormond College</h3>
+    <p><strong style="color:BrickRed;">• Academic Tutor</strong> for ECOM30002: Econometrics 2, 2019</p>
 </div>
 
-
-<div style="margin-bottom: 30px;" id="Research Interests">
-    <h2 style="color:#003366;">Research Interests</h2>
-        <hr style="border: 0; height: 1px; background: #ccc; margin: 1px 0;">
-    <p>
-        Bayesian Statistics, Non-parametric Methods, Time Series Modelling in Econometrics and Finance
-    </p>
-  <p> 
-          • My primary research focuses on shrinkage priors and variable selections. <br>
-          • I also study dimension reduction for high-dimensional data. 
-    </p>
-</div>
-
-
-
+ 
 
  <!--
     <div style="margin-bottom: 30px;">
@@ -162,8 +172,7 @@
 		</div><!--// bd -->
 
 		<div id="ft">
-			<p>Zheng Fan &mdash; <a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></p> 
-                <p>Website update in March 2025</a></p>
+			<p>Zheng Fan &mdash; <a href="mailto:fan.z@unimelb.edu.au">fan [dot] z [at] unimelb [dot] edu [dot] au</a></p>
 		</div><!--// footer -->
 
 	</div><!-- // inner -->
