--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <h2 style="color:#003366;">Welcome!</h2>
         <hr style="border: 0; height: 1px; background: #ccc; margin: 1px 0;">
     <p>Hi, welcome to my personal website! <br>
-    	 • I'm currently a PhD candidate in Economics at The University of Melbourne. <br>
+    	 • I'm currently a PhD candidate in Economics at The University of Melbourne, Australia. <br>
 </p>
 </div>
 
@@ -119,7 +119,7 @@
     </p>
   <p> 
           • My primary research focuses on shrinkage priors and variable selections. <br>
-          • I also study dimension reduction for high-dimensional data. 
+          • I also investigate methods for high-dimensional data. 
     </p>
 </div>
 
