--- a/teaching.html
+++ b/teaching.html
@@ -108,20 +108,19 @@
         <a href="https://github.com/zhengf1?tab=repositories" target="_blank">GitHub HERE</a> for the following subjects:
     </p>
       <div style="margin-left: 15px;">
-<table>
-  <tr>
-   <td> </td><td> ECON10003: </td><td>Introductory Macroeconomics (4 semesters, 2019-2022) </td>
-    <td> | ECON10005: </td><td>Quantitative Methods 1 (4 semesters, 2021-2025)</td>
-  </tr>
-  <tr>
-    <td>  </td><td>ECON20001: </td><td>Intermediate Macroeconomics (2 semesters, 2021-2022) </td>
-    <td> | ECON20003: </td><td>Quantitative Methods 2 (summer, 2023)</td>
-  </tr>
-  <tr>
-    <td> </td><td>ECOM20001: </td><td>Econometrics 1 (4 semesters, 2022-2025) </td>
-    <td> | ECOM90025: </td><td>Advanced Data Analysis (2 semesters, 2022-2023)</td>
-  </tr>
-</table>
+
+    <h5>ECON10003: Introductory Macroeconomics (Undergraduate): 2019-S2; 2020-S1; 2021-S1; 2022-S1;</h5>
+    <h5>ECON10005: Quantitative Methods 1 (Undergraduate): 2021-S1; 2022-S1; <a href="https://github.com/zhengf1/2023QM1" target="_blank">2023-S1</a>; 2025-S1;</h5>
+    <h5>ECON20001: Intermediate Macroeconomics (Undergraduate): 2021-S2; <a href="https://github.com/zhengf1/InterMa2022" target="_blank">2022-S2</a>;</h5>
+    <h5>ECON20003: Quantitative Methods 2 (Undergraduate): <a href="https://github.com/zhengf1/2023QM2" target="_blank">2023-Summer</a>;</h5>
+    <h5>ECOM20001: Econometrics 1 (Undergraduate): 2022-S1; <a href="https://github.com/zhengf1/2023ECOM1" target="_blank">2023-S1</a>;   
+        <a href="https://github.com/zhengf1/2024ECOM1" target="_blank">2024-S2</a>;   
+        <a href="https://github.com/zhengf1/2025ECOM1" target="_blank">2025-S1</a>
+    </h5>
+    <h5>ECOM90025: Advanced Data Analysis (Graduate): <a href="https://github.com/zhengf1/ADA2022" target="_blank">2022-S2</a>; 
+        <a href="https://github.com/zhengf1/2023-S2-ADA" target="_blank">2023-S2</a>;
+    </h5>
+
   </div>
 
 
