--- a/teaching.html
+++ b/teaching.html
@@ -104,30 +104,28 @@
         <hr style="border: 0; height: 1px; background: #ccc; margin: 1px 0;">
         <h3>The University of Melbourne, Department of Economics</h3>
     <p><strong style="color:BrickRed;">• Teaching Assistant (Tutor)</strong> (2019 - present):</p>
-     <p>You may find some of my teaching materials at 
-        <a href="https://github.com/zhengf1?tab=repositories" target="_blank">GitHub HERE</a> for the following subjects:
+     <p>You may find some of my teaching materials at github for the following subjects (click the year-semester for navigation):
     </p>
-      <div style="margin-left: 15px;">
+      <div style="margin-left: 10px;">
 
-    <h5>ECON10003: Introductory Macroeconomics (Undergraduate): 2019-S2; 2020-S1; 2021-S1; 2022-S1;</h5>
-    <h5>ECON10005: Quantitative Methods 1 (Undergraduate): 2021-S1; 2022-S1; <a href="https://github.com/zhengf1/2023QM1" target="_blank">2023-S1</a>; 2025-S1;</h5>
-    <h5>ECON20001: Intermediate Macroeconomics (Undergraduate): 2021-S2; <a href="https://github.com/zhengf1/InterMa2022" target="_blank">2022-S2</a>;</h5>
-    <h5>ECON20003: Quantitative Methods 2 (Undergraduate): <a href="https://github.com/zhengf1/2023QM2" target="_blank">2023-Summer</a>;</h5>
-    <h5>ECOM20001: Econometrics 1 (Undergraduate): 2022-S1; <a href="https://github.com/zhengf1/2023ECOM1" target="_blank">2023-S1</a>;   
-        <a href="https://github.com/zhengf1/2024ECOM1" target="_blank">2024-S2</a>;   
-        <a href="https://github.com/zhengf1/2025ECOM1" target="_blank">2025-S1</a>
-    </h5>
-    <h5>ECOM90025: Advanced Data Analysis (Graduate): <a href="https://github.com/zhengf1/ADA2022" target="_blank">2022-S2</a>; 
-        <a href="https://github.com/zhengf1/2023-S2-ADA" target="_blank">2023-S2</a>;
-    </h5>
+<h5>ECON10003: Introductory Macroeconomics (Undergraduate): 2019-S2; 2020-S1; 2021-S1; 2022-S1;</h5>
+<h5>ECON10005: Quantitative Methods 1 (Undergraduate): 2021-S1; 2022-S1; <a href="https://github.com/zhengf1/2023QM1" target="_blank">2023-S1</a>; 2025-S1;</h5>
+<h5>ECON20001: Intermediate Macroeconomics (Undergraduate): 2021-S2; <a href="https://github.com/zhengf1/InterMa2022" target="_blank">2022-S2</a>;;</h5>
+<h5>ECON20003: Quantitative Methods 2 (Undergraduate): <a href="https://github.com/zhengf1/2023QM2" target="_blank">2023-Summer</a>;</h5>
+<h5>ECOM20001: Econometrics 1 (Undergraduate): 2022-S1; <a href="https://github.com/zhengf1/2023ECOM1" target="_blank">2023-S1</a>;   <a href="https://github.com/zhengf1/2024ECOM1" target="_blank">2024-S2</a>
+;   <a href="https://github.com/zhengf1/2025ECOM1" target="_blank">2025-S1</a>
+</h5>
+<h5>ECOM90025: Advanced Data Analysis (Graduate): <a href="https://github.com/zhengf1/ADA2022" target="_blank">2022-S2</a>; <a href="https://github.com/zhengf1/2023-S2-ADA" target="_blank">2023-S2</a>;</h5>
+
+
 
   </div>
 
 
-    <p><strong style="color:BrickRed;">• Research Assistant (RA)</strong>: Supervisor: A/Prof. Yong Song, 2021 - present</p>
+    <p><strong style="color:BrickRed;">• Research Assistant (RA)</strong> 2021 - present</p>
     
             <h3>The University of Melbourne, Melbourne Institute</h3>
-    <p><strong style="color:BrickRed;">• Research Assistant (RA)</strong>: Supervisor: Dr. Ou Yang; Group Director: Prof. Anthony Scott  , 2019</p>
+    <p><strong style="color:BrickRed;">• Research Assistant (RA)</strong> 2019</p>
     
                 <h3>The University of Melbourne, Ormond College</h3>
     <p><strong style="color:BrickRed;">• Academic Tutor</strong> for ECOM30002: Econometrics 2, 2019</p>
