--- a/skills.html
+++ b/skills.html
@@ -115,7 +115,7 @@
     <p> • English (fluent), Mandarin (native)</p>
 
        <h3>Hobbies</h3>
-    <p> • Coding, Tech gears, Gaming, Badminton, Hiking, Playing with cats.</p>
+    <p> • Coding, Tech gears, Gaming, Badminton, Hiking, many others.</p>
 
 </div>
  
