--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<div class="yui-gc">
 				<div class="yui-u first">
 					<h1>Zheng Fan</h1>
-					<h2>PhD candate in Economics</h2>
+					<h2>PhD candidate in Economics</h2>
 				</div>
 
 				<div class="yui-u">
