--- a/teaching.html
+++ b/teaching.html
@@ -110,7 +110,7 @@
       <div style="margin-left: 10px;">
 
 <h5>ECON10003: Introductory Macroeconomics (Undergraduate): 2019-S2; 2020-S1; 2021-S1; 2022-S1;</h5>
-<h5>ECON10005: Quantitative Methods 1 (Undergraduate): 2021-S1; 2022-S1; <a href="https://github.com/zhengf1/2023QM1" target="_blank">2023-S1</a>; <a href="hhttps://github.com/zhengf1/2025S1QM1" target="_blank">2025-S1</a>;</h5>
+<h5>ECON10005: Quantitative Methods 1 (Undergraduate): 2021-S1; 2022-S1; <a href="https://github.com/zhengf1/2023QM1" target="_blank">2023-S1</a>; <a href="https://github.com/zhengf1/2025S1QM1" target="_blank">2025-S1</a>;</h5>
 <h5>ECON20001: Intermediate Macroeconomics (Undergraduate): 2021-S2; <a href="https://github.com/zhengf1/InterMa2022" target="_blank">2022-S2</a>;</h5>
 <h5>ECON20003: Quantitative Methods 2 (Undergraduate): <a href="https://github.com/zhengf1/2023QM2" target="_blank">2023-Summer</a>;</h5>
 <h5>ECOM20001: Econometrics 1 (Undergraduate): 2022-S1; <a href="https://github.com/zhengf1/2023ECOM1" target="_blank">2023-S1</a>;   <a href="https://github.com/zhengf1/2024ECOM1" target="_blank">2024-S2</a>
