--- a/teaching.html
+++ b/teaching.html
@@ -124,11 +124,11 @@
 
     <p><strong style="color:BrickRed;">• Research Assistant (RA)</strong> 2021 - present</p>
     
-            <h3>The University of Melbourne, Melbourne Institute</h3>
+            <h3>Melbourne Institute of Applied Economic and Social Research, The University of Melbourne</h3>
     <p><strong style="color:BrickRed;">• Research Assistant (RA)</strong> 2019</p>
     
-                <h3>The University of Melbourne, Ormond College</h3>
-    <p><strong style="color:BrickRed;">• Academic Tutor</strong> for ECOM30002: Econometrics 2, 2019</p>
+                <h3>Ormond College, The University of Melbourne</h3>
+    <p><strong style="color:BrickRed;">• Academic Tutor</strong> for <h5> ECOM30002: Econometrics 2 </h5>, 2019</p>
 </div>
 
  
