--- a/teaching.html
+++ b/teaching.html
@@ -103,7 +103,7 @@
  <div style="margin-bottom: 30px;" id = "Academic and Teaching Experience">
     <h2 style="color:#003366;">Teaching and Academic Services</h2>
         <hr style="border: 0; height: 1px; background: #ccc; margin: 1px 0;">
-        <h3>The University of Melbourne, Department of Economics</h3>
+        <h3>Department of Economics, The University of Melbourne </h3>
     <p><strong style="color:BrickRed;">• Teaching Assistant (Tutor)</strong> (2019 - present):</p>
      <p>You may find some of my teaching materials at github for the following subjects (click the year-semester for navigation):
     </p>
