--- a/teaching.html
+++ b/teaching.html
@@ -128,7 +128,7 @@
     <p><strong style="color:BrickRed;">• Research Assistant (RA)</strong> 2019</p>
     
                 <h3>Ormond College, The University of Melbourne</h3>
-    <p><strong style="color:BrickRed;">• Academic Tutor</strong> for <h5> ECOM30002: Econometrics 2 </h5>, 2019</p>
+    <p><strong style="color:BrickRed;">• Academic Tutor</strong> for ECOM30002: Econometrics 2, 2019</p>
 </div>
 
  
